syntax = "proto3";

package infra;

service InfraService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string timestamp = 2;
  string database = 3;
  string error = 4;
}
